force-app/main/default/objects/CourseCategory__c.object
<CustomObject>
    <description>Referenced by a monash college enquiry form.

TO BE DELETED.</description>
    <fields>
        <fullName>CategoryLevel1__c</fullName>
        <description>as per the Monash course finder as at 5-9-13</description>
        <label>Study Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Communication and media</fullName>
                </value>
                <value>
                    <fullName>Design, creative art, architecture</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Environment and sustainability</fullName>
                </value>
                <value>
                    <fullName>Humanities and culture</fullName>
                </value>
                <value>
                    <fullName>Information technology</fullName>
                </value>
                <value>
                    <fullName>Law, policy</fullName>
                </value>
                <value>
                    <fullName>Medicine, health, pharmacy</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CategoryLevel2__c</fullName>
        <description>as per the Monash course finder as at 5-9-13</description>
        <label>Detailed Study Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aeronautical engineering</fullName>
                </value>
                <value>
                    <fullName>Aerospace engineering</fullName>
                </value>
                <value>
                    <fullName>Biological engineering</fullName>
                </value>
                <value>
                    <fullName>Chemical engineering</fullName>
                </value>
                <value>
                    <fullName>Civil engineering</fullName>
                </value>
                <value>
                    <fullName>Computer science</fullName>
                </value>
                <value>
                    <fullName>Computer systems engineering</fullName>
                </value>
                <value>
                    <fullName>Electrical engineering</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Engineering technology</fullName>
                </value>
                <value>
                    <fullName>Environmental engineering</fullName>
                </value>
                <value>
                    <fullName>Industrial engineering</fullName>
                </value>
                <value>
                    <fullName>Infrastructure engineering</fullName>
                </value>
                <value>
                    <fullName>Maintenance engineering</fullName>
                </value>
                <value>
                    <fullName>Materials engineering</fullName>
                </value>
                <value>
                    <fullName>Mechanical engineering</fullName>
                </value>
                <value>
                    <fullName>Mechatronics engineering</fullName>
                </value>
                <value>
                    <fullName>Mining engineering</fullName>
                </value>
                <value>
                    <fullName>Pulp and paper technologies</fullName>
                </value>
                <value>
                    <fullName>Robotics</fullName>
                </value>
                <value>
                    <fullName>Software engineering</fullName>
                </value>
                <value>
                    <fullName>Traffic engineering</fullName>
                </value>
                <value>
                    <fullName>Transport engineering</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Actuarial studies</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Business administration</fullName>
                </value>
                <value>
                    <fullName>Business information systems</fullName>
                </value>
                <value>
                    <fullName>Business statistics</fullName>
                </value>
                <value>
                    <fullName>Business strategy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CourseCode__c</fullName>
        <label>Course Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CourseName__c</fullName>
        <label>Course Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alfred</fullName>
                </value>
                <value>
                    <fullName>Berwick</fullName>
                </value>
                <value>
                    <fullName>Caulfield</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>Clayton</fullName>
                </value>
                <value>
                    <fullName>Gippsland</fullName>
                </value>
                <value>
                    <fullName>Parkville</fullName>
                </value>
                <value>
                    <fullName>Peninsula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <description>for filtering to PT or FT options</description>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FT</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialisation__c</fullName>
        <description>Temporary field to capture new field value during transition to new course architecture</description>
        <label>Specialisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Course Category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Categories</pluralLabel>
    <recordTypes>
        <fullName>Domestic</fullName>
        <active>true</active>
        <label>Domestic</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>